# animationeditor-qt_vulkanhpp-

./: CMakeLists.txt  README.md
Resources/materials/: test1.json
Resources/renderpass/: default.json
src/: main.cpp
src/core/: Contaxt.cpp  Contaxt.hpp  Render.cpp  VulkanContaxt.cpp  VulkanContaxt.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanWindow.cpp  VulkanWindow.hpp
src/core/GameObject/: Scene.cpp  Scene.hpp
src/core/GameObject/input/: input.cpp  input.hpp
src/core/engine/: Mapping.hpp
src/core/resource/: DescriptorSetManager.cpp  DescriptorSetManager.hpp  FrameBufferManager.cpp  FrameBufferManager.hpp  Material.Managercpp  MaterialManager.cpp  MaterialManager.hpp  PipelineManager.cpp  PipelineManager.hpp  RenderPassManager.cpp  RenderPassManager.hpp  ResourceManager.cpp  ResourceManager.hpp  Scene.cpp  Scene.hpp  ShaderManager.cpp  ShaderManager.hpp
src/core/utils/: CommandPool.cpp  CommandPool.hpp  DescriptorPool.cpp  DescriptorPool.hpp  Vertex.cpp  utils.hpp  utrls.hpp
src/ui/: MainWindow.cpp  MainWindow.hpp
